--- a/css/fold.css
+++ b/css/fold.css
@@ -17,7 +17,6 @@ body {
 	margin-top:20px;
 	height:575px;
 	width:1000px;
-	padding:1px;
 	border-radius:2px;
 	box-shadow:3px 3px 3px black;
 }
@@ -48,27 +47,34 @@ body {
 	padding:5px;
 }
 
-#file, #help {
+#file, #templates, #help {
 	display:inline-block;
 }
 
-#menuDropdown {
+#menuDropdown, #templatesDropdown {
 	position:absolute;
 	display:none;
 	cursor:pointer;
 	background:#1B1C1A;
-	width:100px;
 	border-radius:2px;
 	box-shadow:2px 2px 2px black;
 }
 
-#menuDropdown > div {
+#menuDropdown {
+	width:100px;
+}
+
+#templatesDropdown {
+	width:190px;
+}
+
+#menuDropdown > div, #templatesDropdown > div {
 	border-bottom:1px solid black;
 	height:25px;
 	padding:2px;
 }
 
-#menuDropdown > div:hover {
+#menuDropdown > div:hover, #templatesDropdown > div:hover {
 	background: #4A4D47;
 	color: #BF080B;
 }
@@ -78,7 +84,7 @@ body {
 }
 
 #deleteObject {
-	margin-top:200px;
+	margin-top:80px;
 }
 
 #leftPanelContent {
@@ -95,8 +101,9 @@ body {
 	clear:both;
 	float:left;
 	width:100%;
-	height:25px;
+	height:30px;
 	background:#313631;
+	padding:4px;
 }
 
 .underline {
@@ -121,10 +128,6 @@ body {
 	display:inline-block;
 	width:80px;
 	margin:auto;
-}
-
-#helpNotifier {
-	border-right:1px solid black;
 }
 
 #dialogoverlay { 
@@ -241,4 +244,20 @@ body {
 	text-shadow:2px 2px #4D4C49;
 	border-radius:3px;
 	letter-spacing: 2px;
+	cursor:default;
 }
+
+#helpPdf {
+	display:none;
+	position:absolute;
+	top:0px;
+	left:0px;
+	text-align:center;
+	width:100%;
+	z-index:5;
+}
+
+#pdfHolder {
+	width:900px;
+}
+
